--- a/index.html
+++ b/index.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year,New Mission</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
+     <header class="header">
+    
+
+   <div class=" heading">
+<h3 class="greet">Happy New Year</h3>
+<h1 class="title">New Year Party Celebration</h1>
+
+
+
+
+    </div>
+
+
+
+
+
+
+     </header>
     
 </body>
 </html>
